@@ -7,6 +7,8 @@
 The format is based on [[https://keepachangelog.com/en/1.0.0/][Keep a Changelog]].
 
 ** [[https://github.com/ohyecloudy/slab/compare/v1.0.0...HEAD][Unrelease]]
+*** Added
+    - 파이프라인 상태(fixed, success, failed, still failing) 알림 여부를 config로 설정할 수 있다
 ** [[https://github.com/ohyecloudy/slab/compare/aae4f83786...v1.0.0][v1.0.0]]
 *** Added
     - poor link purling
